Fix overflow in gauge/goal visulaizations

--- a/src/plugins/vis_type_vislib/public/index.scss
+++ b/src/plugins/vis_type_vislib/public/index.scss
@@ -3,9 +3,3 @@
 .vislib .visLegend__toggle {
   margin: $euiSizeS;
 }
-
-.vislib__container,
-.vislib__wrapper {
-  flex: 1 1 0;
-  display: flex;
-}
