--- a/src/plugins/vis_type_vislib/public/vislib/_vislib_vis_type.scss
+++ b/src/plugins/vis_type_vislib/public/vislib/_vislib_vis_type.scss
@@ -21,7 +21,9 @@
   }
 }
 
-.vislib__chart {
+.vislib__chart,
+.vislib__wrapper,
+.vislib__container {
   display: flex;
   flex: 1 1 auto;
   min-height: 0;
